lab3/replica-set.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  selector:
    app: frontend
  ports:
    - port: 8000
      targetPort: 3000
      protocol: TCP
  type: NodePort
